<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Panel.Tab"
    tools:context=".SearchUserFragment">

    <TextView
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/found_info"
        style="@style/FoundInfoBanner"
        android:text="@string/found_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/user_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/found_info" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/temp_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/splash_ic_size"
            android:layout_height="@dimen/splash_ic_size"
            android:src="@drawable/ic_baseline_supervisor_account_24"
            android:tint="@android:color/darker_gray"
            android:contentDescription="@string/search"
            tools:ignore="UseAppTint" />

        <TextView
            android:textSize="@dimen/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_temp_message"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:layout_width="@dimen/splash_ic_size"
            android:layout_height="@dimen/splash_ic_size"
            android:contentDescription="@string/not_found"
            android:src="@drawable/ic_baseline_error_outline_24"
            android:tint="@android:color/darker_gray"
            tools:ignore="UseAppTint" />

        <TextView
            android:textSize="@dimen/text_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_found"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:visibility="gone"
        tools:visibility="visible"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>