<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite" />
    <item
        android:id="@+id/setting_menu"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />
</menu>